--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                 <a href="https://www.youtube.com/@anillama9033" aria-label="YouTube" target="_blank">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a href="https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C" aria-label="Facebook" target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=100005158245674" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="https://www.instagram.com/nepalitypingcenter?igsh=ZzVxam43N3l6aWs1" aria-label="Instagram" target="_blank">
+                <a href="https://www.instagram.com/anil.moktan87/" aria-label="Instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
             </nav>
