--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=100005158245674" target="_blank">
                     <i class="fab fa-facebook-f"></i>
+                    <a href="https://www.linkedin.com/in/anil-l-3b0a23236/" aria-label="LinkedIn" target="_blank">
+    <i class="fab fa-linkedin"></i>
+</a>
                 </a>
                 <a href="https://www.instagram.com/anil.moktan87/" aria-label="Instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
