--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
         .education-item p {
             margin: 5px 0;
         }
+
+        <style>
+    .certificate-img {
+        width: 100%;
+        max-width: 400px;
+        display: block;
+        margin: 15px 0;
+        border-radius: 5px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+        
+</style>
     </style>
 </head>
 <body id="page-top">
@@ -210,6 +222,15 @@
                 <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology</p>
             </div>
         </section>
+
+       <section id="Training" class="container">
+    <h2 class="section-title">Training & Certifications</h2>
+
+    <div class="Training-item">
+        <h4>Microsoft Excel 101 Event </h4>
+        <p><strong>Satyava Digital Class</strong> - Completed in 2023</p>
+        <img src="images/digital-marketing-cert.jpg" alt="Digital Marketing Certification" class="certificate-img">
+    </div>
 
         <!-- Experience Section -->
         <section id="experience" class="container">
