--- a/index.html
+++ b/index.html
@@ -222,16 +222,18 @@
                 <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology</p>
             </div>
         </section>
-
+        
+<!-- Training  Section -->
        <section id="Training" class="container">
     <h2 class="section-title">Training & Certifications</h2>
 
     <div class="Training-item">
         <h4>Microsoft Excel 101 Event </h4>
         <p><strong>Satyava Digital Class</strong> - Completed in 2023</p>
-        <img src="images/digital-marketing-cert.jpg" alt="Digital Marketing Certification" class="certificate-img">
+        <img src="excel.png" alt="Digital Marketing Certification" class="certificate-img">
     </div>
-
+ </section>
+        
         <!-- Experience Section -->
         <section id="experience" class="container">
             <h2 class="section-title">Experience</h2>
