--- a/index.html
+++ b/index.html
@@ -125,17 +125,16 @@
             margin: 5px 0;
         }
 
-        <style>
-    .certificate-img {
-        width: 100%;
-        max-width: 400px;
-        display: block;
-        margin: 15px 0;
-        border-radius: 5px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    }
-        
-</style>
+      .certificate-img {
+    width: 100px; /* Adjust width for passport size */
+    height: 130px; /* Adjust height for passport size */
+    display: block;
+    margin: 15px auto; /* Centers the image */
+    border-radius: 5px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    object-fit: cover; /* Ensures the image maintains proper aspect ratio */
+}
+
     </style>
 </head>
 <body id="page-top">
