--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
         <p><strong>Satyava Digital Class</strong> - Completed in 2023</p>
         <img src="excel.png" alt="Digital Marketing Certification" class="certificate-img">
     </div>
+           <div class="Training-item">
+                <h4>Photoshop & Editing (Basic)</h4>
+                <p><strong>I have learned Photoshop and image editing through self-study on YouTube, allowing me to create visually appealing graphics, edit images, and enhance digital content. My skills help me improve branding, marketing materials, and professional visuals for various projects. </strong> - 2018 to 2020</p>
+            
+            </div>
  </section>
         
         <!-- Experience Section -->
