--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <div class="Training-item">
         <h4>Microsoft Excel 101 Event </h4>
-        <p><strong>Satyava Digital Class</strong> - Completed in 2023</p>
+        <p><strong>Satyava Digital Class</strong> - Completed on 2023</p>
         <img src="excel.png" alt="Digital Marketing Certification" class="certificate-img">
     </div>
            <div class="Training-item">
