--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <!-- Masthead Heading -->
             <h1 class="masthead-heading text-uppercase mb-0">Anil Lama(अनिल लामा)</h1>
             <!-- Masthead Subheading -->
-            <p class="masthead-subheading font-weight-light mb-0">L1 Lead</p>
+            <p class="masthead-subheading font-weight-light mb-0">Founder/Nepali Typing Center/L1 Lead</p>
 
             <!-- Social Media Navigation -->
             <nav class="social-nav">
