--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     // Placeholder function — use actual Nepali calendar logic or library here
     function getNepaliDatePlaceholder(date) {
       // You can replace this with a real Nepali date converter or API
-      return "२०८2 बैशाख"; // Example static Nepali date
+      return "साल २०८2"; // Example static Nepali date
     }
 
     setInterval(updateTimeAndDate, 1000);
