--- a/index.html
+++ b/index.html
@@ -215,55 +215,7 @@
     border-radius: 5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
-<!DOCTYPE html>
-<html lang="ne">
-<head>
-  <meta charset="UTF-8">
-  <title>Nepali Unicode Typing Tool</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    #unicodeWidgetWrapper {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      width: 280px;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      overflow: hidden;
-      z-index: 9999;
-    }
-    #unicodeWidgetWrapper iframe {
-      width: 100%;
-      height: 300px;
-      border: none;
-    }
-    #unicodeAttribution {
-      text-align: center;
-      font-size: 10px;
-      color: #888;
-      padding: 6px 0;
-      background: #f5f5f5;
-      border-top: 1px solid #eee;
-    }
-  </style>
-</head>
-<body>
 
-<div id="unicodeWidgetWrapper">
-  <iframe 
-    src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542">
-  </iframe>
-  <div id="unicodeAttribution">
-    © <a href="https://www.anillama.com.np" target="_blank" style="color: #888; text-decoration: none;">Anil Lama</a>
-  </div>
-</div>
-
-</body>
-</html>
 
 
     </style>
@@ -402,6 +354,21 @@
             <p>Contact Number: <a href="tel:+9779851359109">+977 9851359109</a></p>
         </section>
     </main>
+  <!-- Nepali Unicode Typing Tool by Ashesh.com.np -->
+<div style="max-width: 320px; margin: 40px auto; padding: 16px; background: #fdfdfd; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <iframe 
+    src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542" 
+    width="100%" 
+    height="320" 
+    frameborder="0" 
+    scrolling="no" 
+    style="border-radius: 8px;">
+  </iframe>
+  <p style="text-align: center; font-size: 11px; color: #666; margin-top: 8px;">
+<span style="color:gray; font-size:10px;">
+      © Nepali Unicode
+  </p>
+</div>
 
     <!-- Footer -->
     <footer>
