--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
             <p>Contact Number: <a href="tel:+9779851359109">+977 9851359109</a></p>
         </section>
     </main>
+  <h3>Nepali Typing Converter</h3>
   <!-- Nepali Unicode Typing Tool by Ashesh.com.np -->
 <div style="max-width: 320px; margin: 40px auto; padding: 16px; background: #fdfdfd; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
   <iframe 
