--- a/index.html
+++ b/index.html
@@ -354,7 +354,10 @@
             <p>Contact Number: <a href="tel:+9779851359109">+977 9851359109</a></p>
         </section>
     </main>
-  <h3>Nepali Typing Converter</h3>
+   <!-- Nepali Typing Converter -->
+        <section id="Nepali Typing Converter" class="container">
+            <h2 class="section-title">Nepali Typing Converter</h2>
+
   <!-- Nepali Unicode Typing Tool by Ashesh.com.np -->
 <div style="max-width: 320px; margin: 40px auto; padding: 16px; background: #fdfdfd; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
   <iframe 
@@ -368,6 +371,7 @@
   <p style="text-align: center; font-size: 11px; color: #666; margin-top: 8px;">
 <span style="color:gray; font-size:10px;">
       © Nepali Unicode
+  
   </p>
 </div>
 
