--- a/index.html
+++ b/index.html
@@ -354,23 +354,30 @@
             <p>Contact Number: <a href="tel:+9779851359109">+977 9851359109</a></p>
         </section>
     </main>
-   <!-- Nepali Typing Converter -->
-        <section id="Nepali Typing Converter" class="container">
-            <h2 class="section-title">Nepali Typing Converter</h2>
+  <!-- Nepali Typing Converter -->
+<section id="nepali-typing-converter" class="container" style="padding: 60px 20px; background-color: #f9f9f9;">
+  <div style="max-width: 600px; margin: 0 auto; text-align: center;">
+    <h2 style="font-size: 28px; font-weight: 600; margin-bottom: 24px; color: #333;">
+      Nepali Typing Converter
+    </h2>
 
-  <!-- Nepali Unicode Typing Tool by Ashesh.com.np -->
-<div style="max-width: 320px; margin: 40px auto; padding: 16px; background: #fdfdfd; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-  <iframe 
-    src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542" 
-    width="100%" 
-    height="320" 
-    frameborder="0" 
-    scrolling="no" 
-    style="border-radius: 8px;">
-  </iframe>
-  <p style="text-align: center; font-size: 11px; color: #666; margin-top: 8px;">
-<span style="color:gray; font-size:10px;">
-      © Nepali Unicode
+    <div style="background: #ffffff; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08); padding: 20px;">
+      <iframe 
+        src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542" 
+        width="100%" 
+        height="320" 
+        frameborder="0" 
+        scrolling="no" 
+        style="border-radius: 8px;">
+      </iframe>
+
+      <p style="font-size: 12px; color: #888; margin-top: 12px;">
+        © <a href="https://www.ashesh.com.np/nepali-unicode/" target="_blank" style="color: #888; text-decoration: underline;">Nepali Unicode</a>
+      </p>
+    </div>
+  </div>
+</section>
+
   
   </p>
 </div>
