--- a/index.html
+++ b/index.html
@@ -354,25 +354,25 @@
             <p>Contact Number: <a href="tel:+9779851359109">+977 9851359109</a></p>
         </section>
     </main>
-  <!-- Nepali Typing Converter -->
-<section id="nepali-typing-converter" class="container" style="padding: 60px 20px; background-color: #f9f9f9;">
-  <div style="max-width: 600px; margin: 0 auto; text-align: center;">
-    <h2 style="font-size: 28px; font-weight: 600; margin-bottom: 24px; color: #333;">
+<!-- Nepali Typing Converter -->
+<section id="nepali-typing-converter" style="width: 100%; background-color: #f9f9f9; padding: 60px 0;">
+  <div style="width: 100%; max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+    <h2 style="font-size: 32px; font-weight: 600; text-align: center; margin-bottom: 30px; color: #333;">
       Nepali Typing Converter
     </h2>
 
-    <div style="background: #ffffff; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08); padding: 20px;">
+    <div style="width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08); padding: 24px;">
       <iframe 
         src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542" 
         width="100%" 
-        height="320" 
+        height="360" 
         frameborder="0" 
         scrolling="no" 
-        style="border-radius: 8px;">
+        style="border-radius: 8px; width: 100%;">
       </iframe>
 
-      <p style="font-size: 12px; color: #888; margin-top: 12px;">
-        © <a href="https://www.ashesh.com.np/nepali-unicode/" target="_blank" style="color: #888; text-decoration: underline;">Nepali Unicode</a>
+      <p style="font-size: 12px; color: #888; text-align: center; margin-top: 12px;">
+        © Nepali Unicode
       </p>
     </div>
   </div>
