--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="clock">00:00:00 AM</div>
     <div id="date">Loading...</div>
   </div>
-
+<img src="Logo.png" alt="Site Logo" style="width: 150px;">
   <script>
     function updateTimeAndDate() {
       const now = new Date();
