--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nepali Date and Time</title>
+  <title>Anil Lama</title>
   <style>
     #clock-widget {
       position: fixed;
@@ -38,13 +38,14 @@
 </head>
 <body>
   <!-- Other page content -->
+   <!-- Favicon -->
+  <link rel="icon" href="images/Logo.png" type="image/png" />
 
   <div id="clock-widget">
     <div id="nepali-date">नेपाली मिति लोड हुँदैछ...</div>
     <div id="clock">00:00:00 AM</div>
     <div id="date">Loading...</div>
   </div>
-<img src="Logo.png" alt="Site Logo" style="width: 150px;">
   <script>
     function updateTimeAndDate() {
       const now = new Date();
