--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Anil Lama</title>
+  <!-- Favicon (Logo in browser tab) -->
+  <link rel="icon" href="Logo.png" type="image/png" />
+</head>
+<body>
+  <h1>Welcome to My Website</h1>
+  <p>The logo should appear in the browser tab!</p>
+</body>
+</html>
   <style>
     #clock-widget {
       position: fixed;
@@ -38,9 +46,6 @@
 </head>
 <body>
   <!-- Other page content -->
-   <!-- Favicon -->
-  <link rel="icon" href="images/Logo.png" type="image/png" />
-
   <div id="clock-widget">
     <div id="nepali-date">नेपाली मिति लोड हुँदैछ...</div>
     <div id="clock">00:00:00 AM</div>
