--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div>
            <div class="Training-item">
                 <h4>Photoshop & Editing (Basic)</h4>
-                <p><strong>I have learned Photoshop and image editing through self-study on YouTube, allowing me to create visually appealing graphics, edit images, and enhance digital content. My skills help me improve branding, marketing materials, and professional visuals for various projects. </strong> - 2018 to 2020</p>
+                <p><strong>I have learned Photoshop and image editing through self-study on YouTube, allowing me to create visually appealing graphics, edit images, and enhance digital content. My skills help me improve branding, marketing materials, and professional visuals for various projects.
             
             </div>
  </section>
