--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="award-item mb-4">
                 <h3>Nepali Typing Center: My First Project</h3>
                 <p>
-                    I successfully launched and managed the Nepali Typing Center, which is now running smoothly on Google Marketplace. Through strategic SEO optimization, I ensured high visibility, making it easier for users to find and utilize our services. <a href="https://g.co/kgs/sqaEEzb" target="_blank">CLICK HERE</a>
+                    I successfully launched and managed the Nepali Typing Center, which is now running smoothly on Google Marketplace. Through strategic SEO optimization, I ensured high visibility, making it easier for users to find and utilize our services. <a href="https://g.co/kgs/sqaEEzb" target="_blank">CHECK HERE</a>
                 </p>
             </div>
         </section>
