--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <a href="https://www.youtube.com/@anillama9033" aria-label="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100005158245674" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/anil-l-3b0a23236/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/anil.moktan87/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/anil.moktan07?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
       </nav>
     </div>
   </header>
