--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
         <p>
           I have learned Photoshop and image editing through self‑study on YouTube, enabling me to create visually appealing graphics, edit images, and enhance digital content. These skills improve branding, marketing materials, and professional visuals for various projects.
         </p>
+        
+      </div>
+      <div class="training-item mb-4">
+        <h4>Google Analytics Certification
+Issued by Google / Skillshop</h4>
+        <p>
+          Demonstrated proficiency in setting up, tracking, analyzing, and interpreting data using Google Analytics. Gained expertise in performance measurement, audience insights, and optimization of digital marketing strategies based on analytics data.
+        </p>
+         <img src="Google Analytics.Png" alt="Google Analytics Certification" class="certificate-img" />
       </div>
     </section>
 
