--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Issued by Google / Skillshop</h4>
         <p>
           Demonstrated proficiency in setting up, tracking, analyzing, and interpreting data using Google Analytics. Gained expertise in performance measurement, audience insights, and optimization of digital marketing strategies based on analytics data.
         </p>
-         <img src="Google Analytics.Png" alt="Google Analytics Certification" class="certificate-img" />
+         <img src="Google Analytics.png" alt="Google Analytics Certification" class="certificate-img" />
       </div>
     </section>
 
