--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="award-item mb-4">
         <h3>Quarterly Impact Award – 2024</h3>
         <p>
-          I am honored to have received the Quarterly Impact Award, recognizing my dedication and contributions at Fonepay. This achievement reflects my commitment to excellence, problem‑solving, and driving meaningful results.
+          I am honored to have received the Quarterly Impact Award, recognizing my dedication and contributions at Fonepay. This achievement reflects my commitment to excellence, problem‑solving, and driving meaningful results. <a href="https://www.linkedin.com/posts/fonepaynepal_hardwork-dedication-impact-activity-7339135682180800513-Jhej/?utm_source=share&utm_medium=member_desktop&rcm=ACoAADriUHQB5BX_7Tab0Y0KOWYze98IrMmN4wA" target="_blank">Click Here</a>
         </p>
       </div>
 
