--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- ✅ Paste your Facebook verification code here -->
+  <meta name="facebook-domain-verification" content="ob5abwu1o745czjhdf7psuzo2vf870" />
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-30TJT4D1LD"></script>
 <script>
