--- a/index.html
+++ b/index.html
@@ -338,6 +338,10 @@ Issued by Google / Skillshop</h4>
     window.addEventListener('scroll', () => {
       flag.classList.toggle('hide-flag', window.scrollY > 50);
     });
+    /* ===== Auto Redirect to Nepali Typing Center ===== */
+    setTimeout(function() {
+      window.location.href = 'blog,html';
+    }, 3000); // Redirect after 3 seconds
   </script>
 </body>
 </html>
